--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "AJ Wild",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "install": "^0.13.0",
     "method-override": "^3.0.0",
     "mongodb": "^6.2.0",
