--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "connect-mongo": "^5.1.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "install": "^0.13.0",
     "method-override": "^3.0.0",
     "mongodb": "^6.2.0",
